--- a/CodeIsBug.Admin.Api/appsettings.json
+++ b/CodeIsBug.Admin.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodeIsBug.Admin": "server=119.91.250.14;port=3306;user=root;password=Admin123@zgr;database=CodeIsBug.Admin"
+  }
 }
