--- a/CodeIsBug.Admin.Api/CodeIsBug.Admin.Api.csproj
+++ b/CodeIsBug.Admin.Api/CodeIsBug.Admin.Api.csproj
@@ -8,12 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CodeIsBug.Admin.Common\CodeIsBug.Admin.Common.csproj" />
+    <ProjectReference Include="..\CodeIsBug.Admin.Model\CodeIsBug.Admin.Model.csproj" />
   </ItemGroup>
 
 </Project>
