--- a/CodeIsBug.Admin.Api/appsettings.Development.json
+++ b/CodeIsBug.Admin.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CodeIsBug.Admin": "server=119.91.250.14;port=3306;user=ROOT;password=Admin123@zgr;database=CodeIsBug.Admin"
   }
 }
