--- a/CodeIsBug.Admin.Model/CodeIsBug.Admin.Model.csproj
+++ b/CodeIsBug.Admin.Model/CodeIsBug.Admin.Model.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SqlSugar.IOC" Version="1.7.0" />
+    <PackageReference Include="SqlSugarCore" Version="5.0.5.4" />
+  </ItemGroup>
+
 </Project>
