--- a/CodeIsBug.Admin.Services/CodeIsBug.Admin.Services.csproj
+++ b/CodeIsBug.Admin.Services/CodeIsBug.Admin.Services.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeIsBug.Admin.Common\CodeIsBug.Admin.Common.csproj" />
+    <ProjectReference Include="..\CodeIsBug.Admin.Extension\CodeIsBug.Admin.Extension.csproj" />
+    <ProjectReference Include="..\CodeIsBug.Admin.Model\CodeIsBug.Admin.Model.csproj" />
+    <ProjectReference Include="..\CodeIsBug.Admin.Repository\CodeIsBug.Admin.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
