更加仓储模式

--- a/CodeIsBug.Admin.Api/appsettings.Development.json
+++ b/CodeIsBug.Admin.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "CodeIsBug.Admin": "server=119.91.250.14;port=3306;user=ROOT;password=Admin123@zgr;database=CodeIsBug.Admin"
+    "CodeIsBug.Admin": "server=119.91.250.14;port=3306;user=root;password=Admin123@zgr;database=CodeIsBug.Admin"
   }
 }
