--- a/CodeIsBug.Admin.Repository/CodeIsBug.Admin.Repository.csproj
+++ b/CodeIsBug.Admin.Repository/CodeIsBug.Admin.Repository.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CodeIsBug.Admin.Common\CodeIsBug.Admin.Common.csproj" />
+    <ProjectReference Include="..\CodeIsBug.Admin.Extension\CodeIsBug.Admin.Extension.csproj" />
     <ProjectReference Include="..\CodeIsBug.Admin.Model\CodeIsBug.Admin.Model.csproj" />
   </ItemGroup>
 
