--- a/CodeIsBug.Admin.Extension/CodeIsBug.Admin.Extension.csproj
+++ b/CodeIsBug.Admin.Extension/CodeIsBug.Admin.Extension.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CodeIsBug.Admin.Common\CodeIsBug.Admin.Common.csproj" />
+    <ProjectReference Include="..\CodeIsBug.Admin.Model\CodeIsBug.Admin.Model.csproj" />
   </ItemGroup>
 
 </Project>
